--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,7 @@
 /* write your override styles here */
+"err": {
+       "message": "You should have at least 300 bytes worth of updates to css/cleanup.css: expected 76 to be above 300",
+       "showDiff": true,
+       "actual": "76",
+       "expected": "300",
+       "stack": "AssertionError:You should have at least 300 bytes worth of updates to css/cleanup.css:expected 76 to be above 300", "
